--- a/login.html
+++ b/login.html
@@ -44,9 +44,11 @@
       <label for="wi">Welfare Inspector</label>
       <select id="wi">
         <option value="">— Select —</option>
+        <option value="fafa" selected>Others</option>
         <option value="santosh">Santosh</option>
         <option value="nikhil">Nikhil</option>
         <option value="sukumar">Sukumar</option>
+        
       </select>
 
       <div class="row" style="margin-top:12px;">
