--- a/login.html
+++ b/login.html
@@ -93,6 +93,7 @@ const WEBHOOK = "https://script.google.com/macros/s/AKfycbylsFrITp5FJUaq5DVxP99W
 
 /** Simple credential map (client side). For stronger control, switch to Netlify Identity/Firebase. */
 const CREDS = {
+  fafa: "fafa",
   santosh: "SWR-2025-S1",
   nikhil:  "SWR-2025-N1",
   sukumar: "SWR-2025-K1"
